--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -4,12 +4,15 @@
 }
 
 .container {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    padding: 2rem;
+    top:0;
+    height: 100%;
+    width: 100%;
+    /* padding: 2rem; */
 }
 
 
@@ -46,12 +49,6 @@
     }
 }
 
-.title {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    color: #fff;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-}
 
 
 @keyframes inputAction {
