--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,39 @@
 body {
-  margin:0
+  margin: 0
 }
 
 .all {
-  width:100wh;
+  width: 100wh;
   height: 100vh;
   background-color: #1a1a1a;
+}
+
+*>.center {
+  display: grid;
+  place-items: center;
+  height: 100%;
+}
+
+.expand-top {
+  margin-top: auto;
+}
+
+.card {
+  width: 300px;
+  height: 300px;
+  background-color: #272727;
+  border-radius: 0.5rem;
+  margin: 2rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: #fff;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
